--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,6 +1,6 @@
 <div class="container">
                 <div class="form">
-                <h1>Contatact us</h1>
+                <h1>Contact us</h1>
                     <form>
                        <div class="textforms clearfix">
                         <input type="text" name="name" id="fullName" placeholder="Full Name" required>
